<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HDMCRE</string>
    <string name="title_activity_main">生意+</string>
    <string name="image_error">错误</string>
    <string name="cansel">取消</string>
    <string name="passcode_lock">启用锁屏</string>
    <string name="passcode_set">锁屏设置</string>
    <string name="passcode_defalt_text">请输入密码</string>
    <string name="passcode_input">已锁屏</string>
    <string name="passcode_input_sub">请输入密码</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="period">.</string>
    <string name="login_submit">登录</string>
    <string name="login_tenant">我是商户</string>
    <string name="login_market">我是商场</string>
    <string name="login_password_placeholder">密码</string>
    <string name="login_username_placeholder">账户名</string>
    <string name="login_slogan_text">商业地产管理系统</string>
    <string name="text_dashboard">仪表盘</string>
    <string name="text_analysis">分析</string>
    <string name="text_app">应用</string>
    <string name="text_message">消息</string>
    <string name="text_scan">扫一扫</string>
    <string name="text_search">搜索</string>
    <string name="text_user_info">个人信息</string>
    <string name="text_voice">语音播报</string>
    <string name="title_activity_developer">DeveloperActivity</string>
    <string name="title_activity_speech">SpeechActivity</string>
    <string name="findPassword">找回密码</string>
    <string name="userID">用户编号</string>
    <string name="iphone">联系方式</string>
    <string name="submit">提交</string>
    <string name="forgetPassword">忘记密码?</string>
</resources>
